examples/type_system/failing/08_compile_identifier_type_mismatch.flx
let value = "oops"
let n: Int = value
